--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
 	  margin:100px auto auto auto;
 	  width:50%;
       }
-      @media only screen and (max-width: 768px) {
-	  body {
-              background: #0d0d0d;
-	      color: #f5f5f5;
-	      margin:auto;
-	      width:90%;
-	  }
-      }
       hr {
 	  border-color : #f5f5f5;
 	  margin-top:100px;
@@ -46,6 +38,21 @@
 	  margin-top:10px;
 	  width: 70%;
 	  font-style: italic;
+      }
+      @media only screen and (max-width: 768px) {
+	  body {
+              background: #0d0d0d;
+	      color: #f5f5f5;
+	      margin:auto;
+	      width:90%;
+	  }
+	  img {
+	      width: 90%;
+	  }
+	  figcaption {
+	      width: 90%; 
+	  }
+      
       }
       img:hover {
 	  filter: grayscale(0%);
